test/org/midica/testfiles/failing/eff-flow-pending-2.midica
INCLUDE inc/instruments.midica


0: hold.wait